# KVBoost

./: .gitignore  COMPREHENSIVE_GUIDE.md  KVBoost_Paper.md  LICENSE  README.md  benchmark.py  cache_manager.py  chunk_registry.py  demo.py  engine.py  index.html  models.py  prompt_assembler.py  pyproject.toml  requirements.txt  results.json  results.tsv  selective_recompute.py  setup.py
.github/workflows/: publish.yml
benchmarks_and_experiments/: 01_scale_models.py  02_latency_breakdown.py  03_hyperparameter_sweep.py  04_output_quality.py  05_realistic_workloads.py  06_memory_analysis.py  07_baseline_comparison.py  08_chunking_strategies.py  09_cache_hit_simulation.py  10_statistical_rigor.py  11_distribution_correctness.py  README.md  __init__.py  accuracy_benchmark.py  benchmark_accuracy_vs_vllm.py  benchmark_vs_mlx.py  benchmark_vs_vllm.py  comparison_benchmark.py  kv_boost_only_longbench.py  latency_benchmark.py  long_bench_arena.py  memory_benchmark.py  my_results.json  run_ablation.sh  run_all.py  run_benchmarks.py  utils.py
benchmarks_and_experiments/.checkpoints/: checkpoint_1e22559d.json  checkpoint_593567d8.json  checkpoint_7163645b.json  kvboost_checkpoint_60da037e.json
benchmarks_and_experiments/important/: accuracy_benchmark.py  comparison_benchmark.py  latency_benchmark.py  memory_benchmark.py  plot_benchmarks.py  report.py  run_benchmark.txt  run_benchmarks.py  run_benchmarks.txt  (+1 more)
docs/: generate_figures.py
examples/: .env.example  run.py
tests/: conftest.py  test_cpu_paged.py  test_flash_attn.py  test_flash_attn_real_model.py  test_server.py
(+100 files in other folders)
