[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvboost"
version = "0.1.0"
description = "Chunk-level KV cache reuse for faster HuggingFace inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Srihari Unnikrishnan" },
]
keywords = ["llm", "inference", "kv-cache", "transformers", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "sentencepiece>=0.1.99",
]

[project.urls]
Repository = "https://github.com/pythongiant/kvboost"
Documentation = "https://kvboost.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kvboost = ["py.typed"]
